1998-10-30  Keiichi Suzuki  <kei-suzu@mail.wbs.ne.jp>

	* lisp/gnus-bbdb.el (gnus-bbdb/update-record): Check existance of
	`To' field before decoding.

1998-10-30  Katsumi Yamaoka   <yamaoka@jpl.org>

	* README-gnus-bbdb.en: New file, translated by courtesy of
	Hiroshi Kawaguchi <taicho@shiba.sony.co.jp>.

1998-10-30  Katsumi Yamaoka   <yamaoka@jpl.org>

	* lisp/dgnushack.el (dgnushack-compile): Add `gnus-bbdb.el'.

	* lisp/gnus-bbdb.el: New file. By courtesy of Keiichi Suzuki.
	* README-gnus-bbdb.ja: Ditto (A part of Nana-TIPS.ja).

1998-10-30  Tatsuya Ichikawa  <t-ichi@po.shiojiri.ne.jp>

	* lisp/gnus.el: Add autoload setting for `gnus-offline' and
	`pop3-fma'.

1998-10-30  Katsumi Yamaoka   <yamaoka@jpl.org>

	* lisp/gnus-art.el (gnus-article-mime-edit-article-setup): Fix
	typo.

1998-10-29  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* lisp/gnus-draft.el (gnus-draft-decoding-function): Use
	`mime-edit-decode-buffer' simply as initial value.

1998-10-29  Katsumi Yamaoka   <yamaoka@jpl.org>

	* lisp/gnus-art.el (gnus-article-mime-edit-article-setup): Force
	`font-lock' to turn on at the beginning. Turn off `font-lock'
	after editing article.

1998-10-29  Katsumi Yamaoka   <yamaoka@jpl.org>

	* lisp/gnus-sum.el (gnus-summary-edit-article-done): Abolish
	`gnus-article-decoded-p'.

	* lisp/nnheader.el: Delete useless comments.

	* lisp/gnus-art.el (gnus-article-edit-article): Call
	`gnus-article-edit-article-setup-function' if it is non nil.
	(gnus-article-mime-edit-article-setup): New function.
	(gnus-article-mime-edit-article-setup-hook): New hook.
	(gnus-article-edit-article-setup-function): New user option. Use
	`gnus-article-mime-edit-article-setup' in default.

1998-10-28  Tatsuya Ichikawa  <t-ichi@po.shiojiri.ne.jp>

	* lisp/pop3-fma.el: Determin base64 encode/decode function by FLIM.

1998-10-26  Tatsuya Ichikawa  <t-ichi@po.shiojiri.ne.jp>

	* lisp/pop3-fma.el: Require `mel-b-el' if `mel-b' does not exist.

1998-10-26  Katsumi Yamaoka   <yamaoka@jpl.org>
